@@ -86,10 +86,12 @@ libraries. They are linked with the program.
 The output of the linking phase is a regular Unix or Windows
 executable file. It does not need "ocamlrun" to run.
 
-%  The following two paragraphs are a duplicate from the description of the batch compiler.
+The compiler is able to emit some information on its internal stages:
 
-The compiler is able to emit some information on its internal stages.
-It can output ".cmt" files for the implementation of the compilation unit
+\begin{itemize}
+\item
+%  The following two paragraphs are a duplicate from the description of the batch compiler.
+".cmt" files for the implementation of the compilation unit
 and ".cmti" for signatures if the option "-bin-annot" is passed to it (see the
 description of "-bin-annot" below).
 Each such file contains a typed abstract syntax tree (AST), that is produced
@@ -98,6 +100,18 @@ about the location and the specific type of each term in the source file.
 The AST is partial if type checking was unsuccessful.
 
 These ".cmt" and ".cmti" files are typically useful for code inspection tools.
+
+\item
+".cmir-linear" files for the implementation of the compilation unit
+if the option "-save-ir-after scheduling" is passed to it.
+Each such file contains a low-level intermediate representation,
+produced by the instruction scheduling pass.
+
+An external tool can perform low-level optimisations,
+such as code layout, by transforming a ".cmir-linear" file.
+To continue compilation, the compiler can be invoked with (a possibly modified)
+".cmir-linear" file as an argument, instead of the corresponding source file.
+\end{itemize}
 
 \section{s:native-options}{Options}
 
